# iris-scheduler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MEASUREMENTS.md  README.md  iris_scheduler.py  pyproject.toml  scheduler.py  start.sh
.github/workflows/: build-runner.yml  scheduler.yml
_daily/: google-dns-ping.json  ipv6-hitlist.json
_hourly/: ukraine-conflict-2022.4.json  ukraine-conflict-2022.json
_weekly/: exhaustive.saturday.json  exhaustive.sunday.json
daily/: 1slash16.json  google-dns-ping.json
iris_scheduler/: __main__.py  index.py  logger.py  main.py  schedule.py  upload.py
iris_scheduler/templates/: MEASUREMENTS.md
measurements/: exhaustive-lip6.json  exhaustive-lip6.json.disabled  ipv6-hitlist.json  ipv6-hitlist.json.disabled  ukraine-conflict-2022.json  zeph-gcp-daily.json  zeph-test.json
oneshot/: 1slash16-oneshot-test4.json
prefixes/: 1slash22.csv
targets/: 1slash16.csv  1slash16.txt  exhaustive.csv  google-dns-46.csv  google-dns-46.txt  mindef.csv
templates/: MEASUREMENTS.md
weekly/: mindef.json  mindef.saturday.json  mindef.saturday.json.noop  mindef.sunday.json
